--- a/cumbersome/step_by_step/tmux.conf
+++ b/cumbersome/step_by_step/tmux.conf
@@ -42,7 +42,7 @@ set -g status-right "#{?client_prefix, ⌨ , } #[bg=#0087ff] #(whoami)@#h #[bg=r
 set -g status-right-length 600
 
 set -g set-clipboard on
-set -g history-limit 8000
+set -g history-limit 20000
 
 set -wg window-status-format " #I #W "
 set -wg window-status-current-format " #I #W "
@@ -52,7 +52,7 @@ set -wg window-status-last-style "fg=red"
 
 set -wg pane-active-border-style "fg=blue"
 set -wg pane-border-style "fg=#585858"       # base01
-set -g default-terminal "xterm-256color"
+set -g default-terminal "screen-256color"
 set -g display-panes-time 5000
 
 # ------- copy to clipboard ------------------------
