--- a/cumbersome/step_by_step/dockerfile_1_pip
+++ b/cumbersome/step_by_step/dockerfile_1_pip
@@ -1,14 +1,13 @@
-FROM xyez/python3.8-cuda11.3:apt0
+FROM docker.kt.io/rlg1/yaoxin/ubuntu22.04:base-v0
 ENV LANG="en_US.UTF-8" LC_CTYPE="en_US.UTF-8" LC_NUMERIC="zh_CN.UTF-8" LC_TIME="zh_CN.UTF-8" LC_COLLATE="en_US.UTF-8" LC_MONETARY="zh_CN.UTF-8" LC_MESSAGES="en_US.UTF-8" LC_PAPER="zh_CN.UTF-8" LC_NAME="zh_CN.UTF-8" LC_ADDRESS="zh_CN.UTF-8" LC_TELEPHONE="zh_CN.UTF-8" LC_MEASUREMENT="zh_CN.UTF-8" LC_IDENTIFICATION="zh_CN.UTF-8"
 RUN wget -O ~/get-pip.py https://bootstrap.pypa.io/get-pip.py && \
-#    wget -O ~/get-pip.py https://bootstrap.pypa.io/get-pip.py && \
-    python3.8 ~/get-pip.py && \
+    python3.11 ~/get-pip.py && \
     rm ~/get-pip.py && \
     python3 -m pip install pip -U && \
     # pip3 config set global.index-url https://mirrors.aliyun.com/pypi/simple && \
     pip3 config set global.index-url https://mirrors.ustc.edu.cn/pypi/web/simple && \
     pip3 install --upgrade pip && \
-    pip3 --no-cache-dir install --upgrade \
+    pip3 --no-cache-dir install --upgrade --ignore-installed \
     	# base
         setuptools \
         numpy \
@@ -20,17 +19,10 @@ RUN wget -O ~/get-pip.py https://bootstrap.pypa.io/get-pip.py && \
         opencv-python \
         Cython \
         ranger-fm \
-        scikit-image plotly jupyter ipykernel jupyterlab sklearn Pillow \
+        scikit-image plotly ipykernel scikit-learn Pillow \
         seaborn \
         # dependency
         PyQt5 \
-        # rl
-        gym==0.19.0 \
-        atari_py==0.2.6 \
-        # gym[atari] 
-        roboschool stable-baselines \
-        dm_control \
-        mpi4py \
         # tools
         zmqnumpy \
         pyftpdlib \
@@ -56,5 +48,21 @@ RUN wget -O ~/get-pip.py https://bootstrap.pypa.io/get-pip.py && \
         hydra-core \
         pyprind \
         virtualenv glog psutil pgrep \
-        glfw imageio pycparser cffi lockfile absl-py && \
+        glfw imageio pycparser cffi lockfile absl-py \
+        && \
+    rm -rf /var/lib/apt/lists/* /tmp/*
+RUN pip3 --no-cache-dir install --upgrade \
+    # these for gym
+    pip wheel==0.38.4 setuptools==65.5.1 && \
+    pip3 --no-cache-dir install --upgrade \
+    # rl(may error)
+    gym==0.19.0 \
+    atari_py==0.2.6 \
+    # gym[atari] 
+    roboschool stable-baselines \
+    dm_control \
+    mpi4py \
+    && \
+    apt-get clean && \
+    apt-get autoremove && \
     rm -rf /var/lib/apt/lists/* /tmp/*
